--- a/src/main/webapp/CSS/simple.css
+++ b/src/main/webapp/CSS/simple.css
@@ -8,6 +8,10 @@ th, td {
     padding: 8px;
 }
 
+.highlight {
+    background-color: lightblue;
+}
+
 tr:nth-child(even){background-color: #f2f2f2}
 
 th {
