--- a/src/main/webapp/CSS/simple.css
+++ b/src/main/webapp/CSS/simple.css
@@ -1,6 +1,48 @@
+.title{
+    margin: auto;
+    text-align: center;
+    color: blue;
+    border: 1px solid yellow;
+    background: rgb(150,150,150);
+    width: 400px;
+    padding: 30px;
+    
+}
+body {
+    background: rgba(0,100,150,0.5);
+    
+}
+
+#bodyRestLinks{
+     margin: auto;
+    text-align: center;
+    color: black;
+}
+.restLinks{
+    display: inline-block;
+    text-align: center;
+    padding: 10px;
+    margin: 10px;
+    width: 40%;
+    color: rgb(255,255,255);
+    background-color: #1f3d7a;
+    -webkit-box-shadow: rgb(30,30,30) 5px 5px 5px;
+    -webkit-border-radius: 10px;
+   color: whitesmoke;
+   text-align: center;
+   -webkit-transition: -webkit-box-shadow 0.3s;
+    
+}
+    .restLinks:hover{
+       -webkit-box-shadow: rgb(30,30,30) 10px 10px 10px;
+       
+   }
+
 table {
+     margin: auto;
     border-collapse: collapse;
-    width: 100%;
+    width: 50%;
+    background: rgb(150,150,150);
 }
 
 th, td {
@@ -15,7 +57,20 @@ th, td {
 tr:nth-child(even){background-color: #f2f2f2}
 
 th {
-    background-color: #1f3d7a
-        ;
+    background-color: #1f3d7a;
     color: white;
 }
+
+.cheeseCategorie {
+    padding: 7px;
+     margin: auto;
+    border-collapse: collapse;
+    width: 50%;
+    background: rgb(200,200,200);
+    border: 1px solid black;
+}
+#categorieTabel{
+    
+     margin: auto;
+}
+
