Added a grid css and gridtest.html. Adjusted the layout of demo-products.html

--- a/src/main/webapp/CSS/simple.css
+++ b/src/main/webapp/CSS/simple.css
@@ -41,7 +41,7 @@ body {
 table {
      margin: auto;
     border-collapse: collapse;
-    width: 50%;
+    /*width: 500%;*/
     background: rgb(150,150,150);
 }
 
