--- a/src/main/webapp/CSS/simple.css
+++ b/src/main/webapp/CSS/simple.css
@@ -42,7 +42,7 @@ body {
 
 table {
     
-    margin: auto;
+    margin: 20px;
     font: 14px Tahoma;
     border-collapse: collapse;
     /*width: 500%;*/
@@ -128,4 +128,15 @@ button {
     margin: auto;
     -webkit-box-shadow: rgb(80,80,80) 1px 1px 1px;
     -webkit-border-radius: 7px;
+}
+
+#productInfo{
+    margin: 30px;
+    text-align: center;
+    color: blue;
+    border: 1px solid black;
+    background: rgb(222,222,222);
+    width: 200px;
+    height: 200px;
+    padding: 20px;
 }
