Users now created in register method (aanmelden)

--- a/src/main/webapp/CSS/navbar.css
+++ b/src/main/webapp/CSS/navbar.css
@@ -44,3 +44,9 @@ li a:hover:not(.active) {
 .active {
     background-color: #4CAF50;
 }
+
+#signupText{
+    margin-left: 30px;
+    color: orange;
+    font-size: 120%;
+}
